# jaxvit

./: pyproject.toml
jaxvit/: layers.py  mlp.py
